# proxy/docs/swagger.yaml
@@ -1,42 +1,7 @@
 definitions:
-  auth.ErrorResponse:
-    properties:
-      "200":
-        type: string
-      "400":
-        type: string
-      "500":
-        type: string
-    type: object
-  auth.LoginResponse:
-    properties:
-      message:
-        type: string
-    type: object
-  auth.TokenResponse:
-    properties:
-      token:
-        type: string
-    type: object
-  auth.User:
-    properties:
-      password:
-        type: string
-      username:
-        type: string
-    type: object
   control.CreateResponse:
     properties:
       message:
-        type: string
-    type: object
-  control.ErrorResponse:
-    properties:
-      code:
-        description: Код ошибки
-        type: integer
-      message:
-        description: Сообщение об ошибке
         type: string
     type: object
   control.rErrorResponse:
@@ -57,18 +22,6 @@ definitions:
       "500":
         type: string
     type: object
-  repository.User:
-    properties:
-      deleted_at:
-        description: Для логического удаления
-        type: string
-      email:
-        type: string
-      id:
-        type: integer
-      name:
-        type: string
-    type: object
   service.Address:
     properties:
       city:
@@ -80,27 +33,6 @@ definitions:
       house:
         type: string
       street:
-        type: string
-    type: object
-  service.ErrorResponse:
-    properties:
-      code:
-        description: Код ошибки
-        type: integer
-      message:
-        description: Сообщение об ошибке
-        type: string
-    type: object
-  service.GeocodeRequest:
-    properties:
-      lat:
-        type: number
-      lng:
-        type: number
-    type: object
-  service.RequestAddressSearch:
-    properties:
-      query:
         type: string
     type: object
   service.ResponseAddress:
@@ -120,81 +52,6 @@ info:
   title: Address API
   version: "1.0"
 paths:
-  /api/address/geocode:
-    post:
-      consumes:
-      - application/json
-      description: This endpoint allows you to get geo coordinates by latitude and
-        longitude.
-      parameters:
-      - description: Geographic coordinates
-        in: body
-        name: body
-        required: true
-        schema:
-          $ref: '#/definitions/service.GeocodeRequest'
-      - description: Bearer {token}
-        in: header
-        name: Authorization
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Успешное выполнение
-          schema:
-            $ref: '#/definitions/service.ResponseAddress'
-        "400":
-          description: Ошибка запроса
-          schema:
-            $ref: '#/definitions/service.ErrorResponse'
-        "500":
-          description: Ошибка подключения к серверу
-          schema:
-            $ref: '#/definitions/service.ErrorResponse'
-      security:
-      - BearerAuth: []
-      summary: Get Geo Coordinates by Latitude and Longitude
-      tags:
-      - geo
-  /api/address/search:
-    post:
-      consumes:
-      - application/json
-      description: This endpoint allows you to get geo coordinates by address.
-      parameters:
-      - description: Address search query
-        in: body
-        name: address
-        required: true
-        schema:
-          $ref: '#/definitions/service.RequestAddressSearch'
-      - description: Bearer {token}
-        in: header
-        name: Authorization
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Успешное выполнение
-          schema:
-            $ref: '#/definitions/service.ResponseAddress'
-        "400":
-          description: Ошибка запроса
-          schema:
-            $ref: '#/definitions/service.ErrorResponse'
-        "500":
-          description: Ошибка подключения к серверу
-          schema:
-            $ref: '#/definitions/service.ErrorResponse'
-      security:
-      - BearerAuth: []
-      summary: Get Geo Coordinates by Address
-      tags:
-      - geo
   /api/book:
     get:
       consumes:
@@ -253,239 +110,6 @@ paths:
       summary: Get Geo Coordinates by Address
       tags:
       - TakeBook
-  /api/login:
-    post:
-      consumes:
-      - application/json
-      description: This endpoint allows a user to log in with their username and password.
-      parameters:
-      - description: User login details
-        in: body
-        name: user
-        required: true
-        schema:
-          $ref: '#/definitions/auth.User'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Login successful
-          schema:
-            $ref: '#/definitions/auth.LoginResponse'
-        "400":
-          description: Invalid request
-          schema:
-            $ref: '#/definitions/auth.ErrorResponse'
-        "401":
-          description: Invalid credentials
-          schema:
-            $ref: '#/definitions/auth.ErrorResponse'
-        "500":
-          description: Internal server error
-          schema:
-            $ref: '#/definitions/auth.ErrorResponse'
-      summary: Login a user
-      tags:
-      - auth
-  /api/register:
-    post:
-      consumes:
-      - application/json
-      description: This endpoint allows you to register a new user with a username
-        and password.
-      parameters:
-      - description: User registration details
-        in: body
-        name: user
-        required: true
-        schema:
-          $ref: '#/definitions/auth.User'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: User registered successfully
-          schema:
-            $ref: '#/definitions/auth.TokenResponse'
-        "400":
-          description: Invalid request
-          schema:
-            $ref: '#/definitions/auth.ErrorResponse'
-        "409":
-          description: User already exists
-          schema:
-            $ref: '#/definitions/auth.ErrorResponse'
-        "500":
-          description: Internal server error
-          schema:
-            $ref: '#/definitions/auth.ErrorResponse'
-      summary: Register a new user
-      tags:
-      - auth
-  /api/users:
-    get:
-      consumes:
-      - application/json
-      description: This description created new SQL user
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: List successful
-          schema:
-            $ref: '#/definitions/control.CreateResponse'
-        "400":
-          description: Invalid request
-          schema:
-            $ref: '#/definitions/control.rErrorResponse'
-        "401":
-          description: Invalid credentials
-          schema:
-            $ref: '#/definitions/control.rErrorResponse'
-        "500":
-          description: Internal server error
-          schema:
-            $ref: '#/definitions/control.rErrorResponse'
-      summary: List SQL user
-      tags:
-      - Controller
-    post:
-      consumes:
-      - application/json
-      description: This description created new SQL user
-      parameters:
-      - description: User login details
-        in: body
-        name: user
-        required: true
-        schema:
-          $ref: '#/definitions/repository.User'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Create successful
-          schema:
-            $ref: '#/definitions/control.CreateResponse'
-        "400":
-          description: Invalid request
-          schema:
-            $ref: '#/definitions/control.rErrorResponse'
-        "401":
-          description: Invalid credentials
-          schema:
-            $ref: '#/definitions/control.rErrorResponse'
-        "500":
-          description: Internal server error
-          schema:
-            $ref: '#/definitions/control.rErrorResponse'
-      summary: Create SQL user
-      tags:
-      - Controller
-  /api/users/{id}:
-    delete:
-      consumes:
-      - application/json
-      description: This description created new SQL user
-      parameters:
-      - description: User ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Delete successful
-          schema:
-            $ref: '#/definitions/control.CreateResponse'
-        "400":
-          description: Invalid request
-          schema:
-            $ref: '#/definitions/control.rErrorResponse'
-        "401":
-          description: Invalid credentials
-          schema:
-            $ref: '#/definitions/control.rErrorResponse'
-        "500":
-          description: Internal server error
-          schema:
-            $ref: '#/definitions/control.rErrorResponse'
-      summary: Delete SQL user
-      tags:
-      - Controller
-    get:
-      consumes:
-      - application/json
-      description: This description created new SQL user
-      parameters:
-      - description: User ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Greate successful
-          schema:
-            $ref: '#/definitions/control.CreateResponse'
-        "400":
-          description: Invalid request
-          schema:
-            $ref: '#/definitions/control.rErrorResponse'
-        "401":
-          description: Invalid credentials
-          schema:
-            $ref: '#/definitions/control.rErrorResponse'
-        "500":
-          description: Internal server error
-          schema:
-            $ref: '#/definitions/control.rErrorResponse'
-      summary: Get SQL user
-      tags:
-      - Controller
-  /api/users{id}:
-    put:
-      consumes:
-      - application/json
-      description: This description created new SQL user
-      parameters:
-      - description: User ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      - description: User detail to update
-        in: body
-        name: user
-        required: true
-        schema:
-          $ref: '#/definitions/repository.User'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Update successful
-          schema:
-            $ref: '#/definitions/control.CreateResponse'
-        "400":
-          description: Invalid request
-          schema:
-            $ref: '#/definitions/control.rErrorResponse'
-        "401":
-          description: Invalid credentials
-          schema:
-            $ref: '#/definitions/control.rErrorResponse'
-        "500":
-          description: Internal server error
-          schema:
-            $ref: '#/definitions/control.rErrorResponse'
-      summary: Update SQL user
-      tags:
-      - Controller
 securityDefinitions:
   BearerAuth:
     in: header
